--- a/OJT-team3/website/templates/login.html
+++ b/OJT-team3/website/templates/login.html
@@ -186,6 +186,7 @@
     </style>
 </head>
 <body class="align">
+    <p>welcome</p>
     <div class="grid">
         {% if user.is_authenticated %}
             <div class="form__messages">
