--- a/OJT-team3/website/templates/login.html
+++ b/OJT-team3/website/templates/login.html
@@ -226,7 +226,7 @@
                     <input type="submit" value="Sign In">
                 </div>
             </form>
-            <p class="text--center">Not a member? <a href="{% url 'signup' %}">Sign up now</a> <svg class="icon"><use xlink:href="#icon-arrow-right"></use></svg></p>
+            <p class="text--center">Not a member? <a href="{% url 'signup' %}">Sign up again now</a> <svg class="icon"><use xlink:href="#icon-arrow-right"></use></svg></p>
         {% endif %}
     </div>
 
