--- a/OJT-team3/website/templates/login.html
+++ b/OJT-team3/website/templates/login.html
@@ -19,14 +19,15 @@
             --bodyFontSize: 0.875rem;
             --bodyFontWeight: 400;
             --bodyLineHeight: 1.5;
-            --loginBorderRadus: 0.25rem;
+            --loginBorderRadius: 0.25rem;
             --loginColor: #eee;
             --loginInputBackgroundColor: #3b4148;
             --loginInputHoverBackgroundColor: #434a52;
             --loginLabelBackgroundColor: #363b41;
             --loginSubmitBackgroundColor: #bee3f8;
             --loginSubmitColor: #211616;
-            --loginSubmitHoverBackgroundColor: #bee3f8;
+            --loginSubmitHoverBackgroundColor: #a5c6e7;
+            --formGap: 20px; /* Added gap variable for forms */
         }
         
         * {
@@ -34,7 +35,6 @@
         }
         
         html {
-            box-sizing: border-box;
             font-size: var(--htmlFontSize);
         }
         
@@ -57,7 +57,7 @@
         .grid {
             inline-size: 90%;
             margin-inline: auto;
-            max-inline-size: 20rem;
+            max-inline-size: 25rem; /* Increased max width */
         }
         
         .form {
@@ -65,18 +65,37 @@
             gap: var(--formGap);
         }
         
+        .form input[type="text"],
         .form input[type="password"],
-        .form input[type="username"],
         .form input[type="submit"] {
             inline-size: 100%;
         }
         
         .form__field {
             display: flex;
+            align-items: center; /* Align items vertically center */
+            border: 1px solid #ccc; /* Border for input fields */
+            border-radius: var(--loginBorderRadius);
+            transition: border-color 0.3s; /* Smooth border transition */
+        }
+
+        .form__field:hover {
+            border-color: #bee3f8; /* Highlight border on hover */
         }
         
         .form__input {
             flex: 1;
+            padding: 0.75rem; /* Consistent padding */
+            border: none; /* Remove default border */
+            border-radius: var(--loginBorderRadius);
+            background-color: var(--loginInputBackgroundColor);
+            transition: background-color 0.3s; /* Smooth transitions */
+            color: #fff; /* Input text color */
+        }
+        
+        .form__input:focus {
+            background-color: var(--loginInputHoverBackgroundColor);
+            outline: none; /* Remove default outline */
         }
         
         .form__messages {
@@ -87,7 +106,7 @@
         
         .form__error {
             color: #d8000c;
-            background-color: #2a2a2a;
+            background-color: rgba(255, 0, 0, 0.1);
             border: 1px solid #d8000c;
             border-radius: 3px;
             padding: 10px;
@@ -97,8 +116,8 @@
         }
         
         .form__success {
-            color: #155724;
-            background-color: #d4edda;
+            color: #c3e6cb;
+            background-color: rgba(76, 175, 80, 0.1);
             border: 1px solid #c3e6cb;
             border-radius: 3px;
             padding: 10px;
@@ -107,42 +126,17 @@
             line-height: 1.4;
         }
         
-        .form__message + .form__message {
-            margin-top: 10px;
-        }
-        
         .login {
             color: var(--loginColor);
-        }
-        
-        .login label,
-        .login input[type="username"],
-        .login input[type="password"],
-        .login input[type="submit"] {
-            border-radius: var(--loginBorderRadus);
-            padding: 1rem;
         }
         
         .login label {
             background-color: var(--loginLabelBackgroundColor);
             border-bottom-right-radius: 0;
             border-top-right-radius: 0;
-            padding-inline: 1.25rem;
-        }
-        
-        .login input[type="password"],
-        .login input[type="username"],
-        .login input[type="text"] {
-            background-color: var(--loginInputBackgroundColor);
-            border-bottom-left-radius: 0;
-            border-top-left-radius: 0;
-        }
-        
-        .login input[type="password"]:focus,
-        .login input[type="password"]:hover,
-        .login input[type="username"]:focus,
-        .login input[type="username"]:hover {
-            background-color: var(--loginInputHoverBackgroundColor);
+            padding: 0.5rem; /* Increased padding for labels */
+            display: flex;
+            align-items: center; /* Align label contents */
         }
         
         .login input[type="submit"] {
@@ -150,9 +144,11 @@
             color: var(--loginSubmitColor);
             font-weight: 700;
             text-transform: uppercase;
+            padding: 1rem;
+            border-radius: var(--loginBorderRadius);
+            transition: background-color 0.3s; /* Smooth transition */
         }
         
-        .login input[type="submit"]:focus,
         .login input[type="submit"]:hover {
             background-color: var(--loginSubmitHoverBackgroundColor);
         }
@@ -177,21 +173,20 @@
         }
         
         .icon {
-            block-size: 1em;
+            width: 20px; /* Increased icon size */
+            height: 20px; /* Increased icon size */
             display: inline-block;
             fill: var(--iconFill);
-            inline-size: 1em;
-            vertical-align: middle;
+            /* Increased spacing between icon and input */
         }
     </style>
 </head>
 <body class="align">
-    <p>welcome</p>
     <div class="grid">
         {% if user.is_authenticated %}
-            <div class="form__messages">
-                <div class="form__success">You are already logged in</div>
-            </div>
+            <script>
+                window.location.href = "{% url 'user_home' %}";
+            </script>
         {% else %} 
             <form action="{% url 'login' %}" method="post" class="form login">
                 {% csrf_token %} 
@@ -203,7 +198,6 @@
                                 <div class="form__error">{{ message }}</div>
                             {% elif message.tags == 'success' %}
                                 <div class="form__success">{{ message }}</div>
-                                <a class="form__success" href="{% url 'user_home' %}">home page</a>
                             {% endif %}
                         {% endfor %}
                     </div>
@@ -211,7 +205,7 @@
                 <div class="form__field">
                     <label for="login__username">
                         <svg class="icon"><use xlink:href="#icon-user"></use></svg>
-                        <span class="hidden">username</span>
+                        <span class="hidden">Username</span>
                     </label>
                     <input autocomplete="username" id="login__username" type="text" name="username" class="form__input" placeholder="Username" required>
                 </div>
@@ -226,7 +220,7 @@
                     <input type="submit" value="Sign In">
                 </div>
             </form>
-            <p class="text--center">Not a member? <a href="{% url 'signup' %}">Sign up again now</a> <svg class="icon"><use xlink:href="#icon-arrow-right"></use></svg></p>
+            <p class="text--center">Not a member? <a href="{% url 'signup' %}">Sign up now</a> <svg class="icon"><use xlink:href="#icon-arrow-right"></use></svg></p>
         {% endif %}
     </div>
 
@@ -236,7 +230,7 @@
         <symbol id="icon-user" viewBox="0 0 1792 1792"><path d="M1600 1405q0 120-73 189.5t-194 69.5H459q-121 0-194-69.5T192 1405q0-53 3.5-103.5t14-109T236 1084t43-97.5 62-81 85.5-53.5T538 832q9 0 42 21.5t74.5 48 108 48T896 971t133.5-21.5 108-48 74.5-48 42-21.5q61 0 111.5 20t85.5 53.5 62 81 43 97.5 14 108 3.5 103.5z" /></symbol>
     </svg>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
