--- a/OJT-team3/website/templates/signup.html
+++ b/OJT-team3/website/templates/signup.html
@@ -154,12 +154,12 @@
         </div>
         
         <div class="form__field">
-            <label for="register__firstname" class="form__label">Username</label>
+            <label for="register__firstname" class="form__label">first name</label>
             <input autocomplete="first name" id="register__firstname" type="text" name="firstname" class="form__input" placeholder="Enter your first name" required>
         </div>
 
         <div class="form__field">
-            <label for="register__lastname" class="form__label">Username</label>
+            <label for="register__lastname" class="form__label">last name</label>
             <input autocomplete="last name" id="register__lastname" type="text" name="lastname" class="form__input" placeholder="Enter your last name" required>
         </div>
 
