--- a/OJT-team3/website/templates/User/UserHome.html
+++ b/OJT-team3/website/templates/User/UserHome.html
@@ -1,5 +1,5 @@
 {% extends 'User/base/base.html' %}
-
+{% load static %} 
 {% block title %}Home - AI Services{% endblock %}
 
 {% block content %}
@@ -8,37 +8,47 @@
 </div>
 
 <section id="services" class="services">
-  <div class="service-card">
-    <h3>Brain Tumor Detection</h3>
-    <p>Utilize our advanced AI algorithms to detect brain tumors with high accuracy.</p>
-    
-  </div>
-  <div class="service-card">
-    <h3>Diabetes Detection</h3>
-    <p>Analyze blood test results to predict diabetes risk using machine learning.</p>
-    
-  </div>
-  <div class="service-card">
-    <h3>Heart Disease Analysis</h3>
-    <p>Evaluate risk factors and predict the likelihood of heart disease.</p>
-    
-  </div>
-  
-  <div class="service-card">
-    <h3>Medical Report Summarization</h3>
-    <p>Generate concise summaries of complex medical reports using NLP.</p>
-    
-  </div>
-  <div class="service-card">
-    <h3>Health Recommendation System</h3>
-    <p>Get personalized health recommendations based on your medical profile.</p>
-   
-  </div>
-  <div class="service-card">
-    <h3>Nearest Hospitals Locator</h3>
-    <p>Find nearby hospitals quickly using our integrated mapping service.</p>
-    
-  </div>
-  
+  <a class="service-card" href="{% url 'braintumor' %}">
+    <div>
+      <h3>Brain Tumor Detection</h3>
+      <p>Utilize our advanced AI algorithms to detect brain tumors with high accuracy.</p>
+    </div>
+  </a>
+
+  <a class="service-card" href="{% url 'predict_diabetes' %}">
+    <div>
+      <h3>Diabetes Detection</h3>
+      <p>Analyze blood test results to predict diabetes risk using machine learning.</p>
+    </div>
+  </a>
+
+  <a class="service-card" href="{% url 'heart' %}">
+    <div>
+      <h3>Heart Disease Analysis</h3>
+      <p>Evaluate risk factors and predict the likelihood of heart disease.</p>
+    </div>
+  </a>
+
+  <a class="service-card" href="{% url 'text_summarization' %}">
+    <div>
+      <h3>Medical Report Summarization</h3>
+      <p>Generate concise summaries of complex medical reports using NLP.</p>
+    </div>
+  </a>
+
+  <a class="service-card" href="{% url 'recommender' %}">
+    <div>
+      <h3>Health Recommendation System</h3>
+      <p>Get personalized health recommendations based on your medical profile.</p>
+    </div>
+  </a>
+
+  <a class="service-card" href="{% url 'find_hospital' %}">
+    <div>
+      <h3>Nearest Hospitals Locator</h3>
+      <p>Find nearby hospitals quickly using our integrated mapping service.</p>
+    </div>
+  </a>
 </section>
+
 {% endblock %}
